syntax = "proto3";

option go_package = "github.com/comnics/did-example/protos";

package verifier;

service Verifier {
  rpc SubmitVP (SubmitVPRequest) returns (SubmitVPResponse) {}
}

message SubmitVPRequest {
  string vp = 1;
}

message SubmitVPResponse {
  string result = 1;
}